--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=78c50011647e51d463ef",
+    "/css/app.css": "/css/app.css?id=bd2586f0e5a0a36493dd"
 }
